# org.muhkuh.lua-luatemp

./: .build  CMakeDiary  CMakeLists.txt  Jenkinsfile  Makefile  build_artifact.py
lua-tempsensor/: CMakeLists.txt  hid.h  tempsensor.i  tempsensor_wrap.c.oldold
lua-tempsensor/installer/lua5.1/: tempsensor.xml
lua-tempsensor/installer/lua5.2/: tempsensor.xml
lua-tempsensor/installer/lua5.3/: tempsensor.xml
lua-tempsensor/installer/lua5.4/: install_linux.lua  install_windows.lua  tempsensor.xml
test/: lua5.1  test.lua
udev/: 40-luatemp.rules  __README__.txt
